<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_configuration"
        android:title="@string/title_configuration"
        android:icon="@drawable/ic_settings" />

    <item
        android:id="@+id/navigation_nia"
        android:title="@string/title_nia"
        android:icon="@drawable/ic_n" />

    <item
        android:id="@+id/navigation_ftp"
        android:title="@string/title_ftp"
        android:icon="@drawable/ic_f" />

    <item
        android:id="@+id/navigation_iperf"
        android:title="@string/title_iperf"
        android:icon="@drawable/ic_i" />

    <item
        android:id="@+id/navigation_http"
        android:title="@string/title_http"
        android:icon="@drawable/ic_h" />
</menu>
